--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     </div>
 
     <div class="social-icons">
-        <span class="bx bxl-facebook-circle"></span>
-        <span class="bx bxl-instagram-alt"></span>
-        <span class="bx bxl-whatsapp"></span>
+        <a href="https://www.facebook.com/nsscet/" target="blank"><span class="bx bxl-facebook-circle"></span></a>
+        <a href="https://www.instagram.com/nss_cet/?hl=en" target="blank"><span class="bx bxl-instagram-alt"></span></a>
+        <a href=""><span class="bx bxl-whatsapp"></span></a>
     </div>
 
     <script src="assets/jquery/jquery.min.js"></script>
