--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
 <body>
     <header id="header" class="fixed-top">
-		<div class="container d-flex align-items-center">
+		<div class="container-fluid d-flex align-items-center">
 			<h1 class="logo mr-auto">
 			  <a href="index.htm">
 				  <img src="images/logo.png" alt="">
